[fix] navbar collapse

--- a/src/assets/scss/_dropdown.scss
+++ b/src/assets/scss/_dropdown.scss
@@ -15,7 +15,7 @@
 
 // The dropdown menu
 .dropdown-menu {
-  margin: 0;
+  //z-index: $zindex-dropdown;
   min-width: $dropdown-min-width;
   padding: $dropdown-padding-y $dropdown-padding-x;
   margin: 0; // Override default margin of ul
