--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -168,7 +168,7 @@
           flex-direction: row;
 
           .dropdown-menu {
-            //position: absolute;
+            position: absolute;
           }
 
           .nav-link {
